添加测试代码

--- a/config/lang/_lang.properties
+++ b/config/lang/_lang.properties
@@ -76,49 +76,76 @@ D6sy7g=请输入语言参数，如 --lang={0}
 
 # ■=bin/init_main.sh
 # ◆=initial_global
-# ●=exiterr@60
+# ●=exiterr@53
 C_wKj8=Unsupported distribution: $ID ($PRETTY_NAME)
-# ●=exiterr@64
+# ●=exiterr@57
 C9Ii-I=Unable to detect Linux distribution, cannot proceed
 # ◆=check_user_sudo
-# ●=exiterr@111
+# ●=exiterr@109
 AxwYcd=无法安装 sudo，请使用 root 账号执行本脚本(su -)，或手动安装 sudo
-# ●=exiterr@113
+# ●=exiterr@111
 C1aPQb=用户非 sudo 组，请使用 root 账号执行本脚本(su -)，或手动加入 sudo
 # ◆=initial_env
-# ●=info@135
+# ●=info@128
 DHzikX=安装所需软件包...
 # ◆=config_sshd
-# ●=info@158
+# ●=info@152
 CbkyTT=sshd 未安装，正在安装...
-# ●=string@173
+# ●=string@167
 AwmRaO=输入新的SSH端口 (当前: {0}) : 
-# ●=info@176
+# ●=info@170
 B2i01m=已设置SSH端口: {0}
-# ●=info@178
+# ●=info@172
 BAf12Q=无效端口，保持默认: $curr_ssh_port
-# ●=info@185
+# ●=info@179
 AV251C=已允许 root 登录
-# ●=info@186
+# ●=info@180
 CMJB1s=已禁止 root 登录
-# ●=info@196
+# ●=info@190
 A58FQX=SSH 配置已应用
 # ◆=configure_ip
-# ●=info@209
+# ●=exiterr@203
+AnMUj_=return value=$ret
+# ●=info@206
 AGC_1W=NetworkManager 正在运行
-# ●=info@212
+# ●=info@209
 BqbrMF=ifupdown 正在运行
-# ●=info@215
+# ●=info@212
 AHezXa=wicked 正在运行
-# ●=info@218
+# ●=info@215
 BfE9I1=network-scripts 正在运行
-# ●=info@221
+# ●=info@218
 C3EbKb=systemd-networkd 正在运行
-# ●=exiterr@224
+# ●=exiterr@221
 DS2AXc=未知网络管理器，无法配置静态IP
 # ◆=install_docker
-# ●=info@230
+# ●=info@227
 B4UUwh=在 $DISTRO 上安装 Docker 与 Docker Compose...
+
+# ■=bin/test_lang.sh
+# ◆=show_help_info
+# ●=exiterr@11
+DVh_Ho=Usage: show_help_info [command]\n \
+        Available commands: find, ls   
+# ●=exiterr@16
+AfYlCL=Error: Command '$cmd' not found.
+# ◆=do_del_lang_files
+# ●=string@55
+Aw30Tu={0} 语言文件已删除
+# ◆=del_lang_files
+# ●=string@67
+B0BXr_=确定要删除 {0} 语言文件吗?
+# ●=string@68
+C7-6zR=操作已取消，文件未删除
+# ◆=add_lang_files
+# ●=string@81
+BGAgyU=# {0} 语言包，文档结构：\n\
+# 1. 自动处理 bin | lib 目录 sh 文件\n\
+# 2. 解析函数 string | info | exiterr | error | success | warning\n\
+# 3. key=distinct hash code + position + order\n\
+# 4. value=localized string
+# ●=info@91
+Aw3y8l={0} 语言文件已创建
 
 # ■=lib/bash_utils.sh
 # ◆=confirm_action
@@ -170,23 +197,18 @@ BzOdCD=JSON format error
 B8f7ce=>&2
 
 # ■=lib/network.sh
-# ◆=need_fix_ip
-# ●=info@24
-DhWnL_=${ENV_NETWORK[
-# ●=info@39
-CFrSgR=用户选择不修改网络配置
 # ◆=count_down
-# ●=info@91
+# ●=info@24
 BjHfVo=${duration}秒后修改网络配置：$IP_ADDR (接口 $IFACE)，请准备好重连。按 Ctrl+C 取消
 # ◆=config_nmcli
-# ●=exiterr@106
+# ●=exiterr@39
 B3mgNd=错误：nmcli 未安装或不可用，请先安装 NetworkManager 命令行工具
-# ●=exiterr@132
+# ●=exiterr@65
 CiQhsW=连接激活失败，请检查网络并尝试重新连接
 # ◆=config_default
-# ●=exiterr@214
+# ●=exiterr@147
 CcDg5_=错误：systemd-networkd 未安装或不可用
-# ●=exiterr@222
+# ●=exiterr@155
 AH9rvM=重启 systemd-networkd 失败，请检查配置文件后再试
 
 # ■=lib/python_install.sh
@@ -227,3 +249,163 @@ AXm5nN=创建虚拟环境失败
 # ◆=main
 # ●=info@300
 DNdsm8=Python $PY_VERSION Standalone 自动安装脚本
+
+# ■=python/cmd_handler.py
+# ◆=pm_refresh
+# ●=info@249
+BbYPmF=正在刷新缓存...
+# ●=info@253
+CHUbDk=缓存刷新完成
+# ◆=pm_upgrade
+# ●=info@267
+A0xBLs=正在更新系统...
+# ●=info@271
+AZPBHL=更新系统完成
+# ◆=pm_install
+# ●=info@288
+BG78fD=正在安装{}...
+# ●=info@292
+CXrh40=安装{}完成
+
+# ■=python/file_util.py
+# ◆=file_backup_sj
+# ●=exiterr@118
+A-g65z=未指定需要备份的文件
+# ●=warning@130
+D1lk1B=未找到匹配 '{pattern}' 的文件
+# ●=warning@143
+Dxey7R=备份文件 {backup_file} 已存在，跳过
+# ●=info@151
+CmH1ZD=已创建备份: {src_file} -> {backup_file}
+# ●=error@154
+BCkZrE=无法创建备份文件 {backup_file}: {e}
+# ●=exiterr@159
+DvpZ6Q=重要文件无法备份
+# ●=info@161
+DGFoIv=备份完成：成功 {backup_count} 个，跳过 {skip_count} 个，失败 {error_count} 个
+# ◆=file_restore_sj
+# ●=exiterr@181
+BXScoo=备份文件 {backup_file} 不存在，还原失败
+# ●=info@187
+CAUKNQ=已还原文件: {backup_file} -> {src_file}
+# ●=exiterr@189
+A3ECb6=无法创建备份文件 {src_file}: {e}
+# ●=info@191
+DadsDq=还原文件：{src_file}
+# ◆=write_source_file
+# ●=info@207
+CoDUAv=已更新 source list: {path}
+# ●=error@209
+BcWbv7=写入失败: {e}
+
+# ■=python/i18n.py
+# ◆=resolve_lang_files
+# ●=string@71
+A7XPUC={0} 语言文件不存在
+# ◆=get_lang_files
+# ●=exiterr@118
+DPIGII=请先添加语言文件
+# ◆=do_add_lang_files
+# ●=info@151
+Aw3y8l={0} 语言文件已创建
+# ◆=add_lang_files
+# ●=string@166
+CEjzNC=确定要新增 {0} 语言文件吗?
+# ●=string@167
+CZD3vP=操作已取消，未增加 {0} 文件文件
+# ◆=do_del_lang_files
+# ●=info@191
+Aw30Tu={0} 语言文件已删除
+# ◆=del_lang_files
+# ●=string@203
+B0BXr_=确定要删除 {0} 语言文件吗?
+# ●=string@204
+C7-6zR=操作已取消，文件未删除
+
+# ■=python/linux_speed.py
+# ◆=choose_mirror
+# ●=error@351
+Dzix3E=Invalid input! Please enter a number between 0-{tot_len}
+# ●=error@355
+BjJxaz=Invalid input! Please enter a number
+
+# ■=python/mypip.py
+# ◆=choose_pip_mirror
+# ●=error@189
+Aa26x4=输入错误！请输入 0-{len(mirror_list)} 之间的数字
+# ●=error@193
+BxmEiD=输入错误！请输入数字
+# ◆=upgrade_pip
+# ●=info@238
+CxNlor=pip 升级成功
+# ●=warning@240
+BRkVnN=pip 升级失败，继续安装其他包
+# ◆=install_packages
+# ●=info@256
+CDudks=安装所需 Python 包...
+# ●=info@266
+Cil2nd={package} 安装成功
+# ●=warning@268
+CiTxoG={package} 安装失败
+
+# ■=python/network_util.py
+# ◆=count_down
+# ●=info@77
+D4Ay3S={duration}秒后修改网络配置：{ip_addr} (接口 {iface})，请准备好重连。按 Ctrl+C 取消
+# ◆=setup_octet
+# ●=_mf@160
+AMqDM_=请输入静态IP地址的最后一段 (1-255) [默认: {}]: 
+# ●=_mf@164
+CXjGI-=请输入数字
+# ●=_mf@169
+CtqJsG=输入必须在 1~255 之间
+# ●=_mf@173
+Dqn3KQ=输入的静态IP地址不能与网关相同，请重新输入
+# ●=_mf@182
+DZ4Zcf=\n操作已取消
+# ◆=fix_ip
+# ●=info@197
+Cn2ESg={env_nw['IS_CLOUD']} 云服务器无需设置固定IP
+# ●=_mf@202
+DpYirA=检测到服务器已配置静态IP，是否调整IP？
+# ●=_mf@204
+CfY7vG=检测到服务器使用动态IP，是否改为静态IP？
+# ●=_mf@206
+DNTqr0=检测到服务器可能使用静态IP，是否调整IP？
+# ●=_mf@209
+CFrSgR=用户选择不修改网络配置
+# ◆=config_nmcli
+# ●=exiterr@225
+Cs9eCn=nmcli 未安装或不可用，请先安装 NetworkManager 命令行工具
+# ●=exiterr@256
+CiQhsW=连接激活失败，请检查网络并尝试重新连接
+# ◆=configure_ip
+# ●=exiterr@276
+AYHgzu=return value={result}
+# ●=info@281
+AGC_1W=NetworkManager 正在运行
+# ●=info@284
+BqbrMF=ifupdown 正在运行
+# ●=info@287
+AHezXa=wicked 正在运行
+# ●=info@290
+BfE9I1=network-scripts 正在运行
+# ●=info@293
+C3EbKb=systemd-networkd 正在运行
+# ●=exiterr@296
+DS2AXc=未知网络管理器，无法配置静态IP
+
+# ■=python/system.py
+# ◆=confirm_action
+# ●=_mf@93
+DZ4Zcf=\n操作已取消
+# ●=_mf@96
+B8V-HW=输入处理出错: {}
+
+# ■=python/test_lang.py
+# ◆=show_help_info
+# ●=exiterr@25
+AulZOi=Usage: show_help_info [command]   
+        Available commands: find, ls   
+# ●=info@95
+Aw3y8l={0} 语言文件已创建
