--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -67,6 +67,7 @@ AV251C=已允许 root 登录
 CMJB1s=已禁止 root 登录
 A58FQX=SSH 配置已应用
 # ◆=configure_ip
+AnMUj_=return value=$ret
 AGC_1W=NetworkManager 正在运行
 BqbrMF=ifupdown 正在运行
 AHezXa=wicked 正在运行
@@ -75,6 +76,24 @@ C3EbKb=systemd-networkd 正在运行
 DS2AXc=未知网络管理器，无法配置静态IP
 # ◆=install_docker
 B4UUwh=在 $DISTRO 上安装 Docker 与 Docker Compose...
+
+# ■=bin/test_lang.sh
+# ◆=show_help_info
+DVh_Ho=Usage: show_help_info [command]\n \
+        Available commands: find, ls   
+AfYlCL=Error: Command '$cmd' not found.
+# ◆=do_del_lang_files
+Aw30Tu={0} 语言文件已删除
+# ◆=del_lang_files
+B0BXr_=确定要删除 {0} 语言文件吗?
+C7-6zR=操作已取消，文件未删除
+# ◆=add_lang_files
+BGAgyU=# {0} 语言包，文档结构：\n\
+# 1. 自动处理 bin | lib 目录 sh 文件\n\
+# 2. 解析函数 string | info | exiterr | error | success | warning\n\
+# 3. key=distinct hash code + position + order\n\
+# 4. value=localized string
+Aw3y8l={0} 语言文件已创建
 
 # ■=lib/bash_utils.sh
 # ◆=confirm_action
@@ -110,9 +129,6 @@ BzOdCD=JSON format error
 B8f7ce=>&2
 
 # ■=lib/network.sh
-# ◆=need_fix_ip
-DhWnL_=${ENV_NETWORK[
-CFrSgR=用户选择不修改网络配置
 # ◆=count_down
 BjHfVo=${duration}秒后修改网络配置：$IP_ADDR (接口 $IFACE)，请准备好重连。按 Ctrl+C 取消
 # ◆=config_nmcli
@@ -145,3 +161,102 @@ ClGJXq=虚拟环境创建成功！
 AXm5nN=创建虚拟环境失败
 # ◆=main
 DNdsm8=Python $PY_VERSION Standalone 自动安装脚本
+
+# ■=python/cmd_handler.py
+# ◆=pm_refresh
+BbYPmF=正在刷新缓存...
+CHUbDk=缓存刷新完成
+# ◆=pm_upgrade
+A0xBLs=正在更新系统...
+AZPBHL=更新系统完成
+# ◆=pm_install
+BG78fD=正在安装{}...
+CXrh40=安装{}完成
+
+# ■=python/file_util.py
+# ◆=file_backup_sj
+A-g65z=未指定需要备份的文件
+D1lk1B=未找到匹配 '{pattern}' 的文件
+Dxey7R=备份文件 {backup_file} 已存在，跳过
+CmH1ZD=已创建备份: {src_file} -> {backup_file}
+BCkZrE=无法创建备份文件 {backup_file}: {e}
+DvpZ6Q=重要文件无法备份
+DGFoIv=备份完成：成功 {backup_count} 个，跳过 {skip_count} 个，失败 {error_count} 个
+# ◆=file_restore_sj
+BXScoo=备份文件 {backup_file} 不存在，还原失败
+CAUKNQ=已还原文件: {backup_file} -> {src_file}
+A3ECb6=无法创建备份文件 {src_file}: {e}
+DadsDq=还原文件：{src_file}
+# ◆=write_source_file
+CoDUAv=已更新 source list: {path}
+BcWbv7=写入失败: {e}
+
+# ■=python/i18n.py
+# ◆=resolve_lang_files
+A7XPUC={0} 语言文件不存在
+# ◆=get_lang_files
+DPIGII=请先添加语言文件
+# ◆=do_add_lang_files
+Aw3y8l={0} 语言文件已创建
+# ◆=add_lang_files
+CEjzNC=确定要新增 {0} 语言文件吗?
+CZD3vP=操作已取消，未增加 {0} 文件文件
+# ◆=do_del_lang_files
+Aw30Tu={0} 语言文件已删除
+# ◆=del_lang_files
+B0BXr_=确定要删除 {0} 语言文件吗?
+C7-6zR=操作已取消，文件未删除
+
+# ■=python/linux_speed.py
+# ◆=choose_mirror
+Dzix3E=Invalid input! Please enter a number between 0-{tot_len}
+BjJxaz=Invalid input! Please enter a number
+
+# ■=python/mypip.py
+# ◆=choose_pip_mirror
+Aa26x4=输入错误！请输入 0-{len(mirror_list)} 之间的数字
+BxmEiD=输入错误！请输入数字
+# ◆=upgrade_pip
+CxNlor=pip 升级成功
+BRkVnN=pip 升级失败，继续安装其他包
+# ◆=install_packages
+CDudks=安装所需 Python 包...
+Cil2nd={package} 安装成功
+CiTxoG={package} 安装失败
+
+# ■=python/network_util.py
+# ◆=count_down
+D4Ay3S={duration}秒后修改网络配置：{ip_addr} (接口 {iface})，请准备好重连。按 Ctrl+C 取消
+# ◆=setup_octet
+AMqDM_=请输入静态IP地址的最后一段 (1-255) [默认: {}]:
+CXjGI-=请输入数字
+CtqJsG=输入必须在 1~255 之间
+Dqn3KQ=输入的静态IP地址不能与网关相同，请重新输入
+DZ4Zcf=\n操作已取消
+# ◆=fix_ip
+Cn2ESg={env_nw['IS_CLOUD']} 云服务器无需设置固定IP
+DpYirA=检测到服务器已配置静态IP，是否调整IP？
+CfY7vG=检测到服务器使用动态IP，是否改为静态IP？
+DNTqr0=检测到服务器可能使用静态IP，是否调整IP？
+CFrSgR=用户选择不修改网络配置
+# ◆=config_nmcli
+Cs9eCn=nmcli 未安装或不可用，请先安装 NetworkManager 命令行工具
+CiQhsW=连接激活失败，请检查网络并尝试重新连接
+# ◆=configure_ip
+AYHgzu=return value={result}
+AGC_1W=NetworkManager 正在运行
+BqbrMF=ifupdown 正在运行
+AHezXa=wicked 正在运行
+BfE9I1=network-scripts 正在运行
+C3EbKb=systemd-networkd 正在运行
+DS2AXc=未知网络管理器，无法配置静态IP
+
+# ■=python/system.py
+# ◆=confirm_action
+DZ4Zcf=\n操作已取消
+B8V-HW=输入处理出错: {}
+
+# ■=python/test_lang.py
+# ◆=show_help_info
+AulZOi=Usage: show_help_info [command]
+Aw3y8l={0} 语言文件已创建
