--- a/config/lang/_lang.properties
+++ b/config/lang/_lang.properties
@@ -75,51 +75,43 @@ A1bqoY=语言文件更新完成
 D6sy7g=请输入语言参数，如 --lang={0}
 
 # ■=bin/init_main.sh
-# ◆=initial_global
-# ●=exiterr@53
-C_wKj8=Unsupported distribution: $ID ($PRETTY_NAME)
-# ●=exiterr@57
-C9Ii-I=Unable to detect Linux distribution, cannot proceed
-# ◆=check_user_sudo
-# ●=exiterr@109
-AxwYcd=无法安装 sudo，请使用 root 账号执行本脚本(su -)，或手动安装 sudo
-# ●=exiterr@111
-C1aPQb=用户非 sudo 组，请使用 root 账号执行本脚本(su -)，或手动加入 sudo
 # ◆=initial_env
-# ●=info@128
+# ●=info@126
 DHzikX=安装所需软件包...
 # ◆=config_sshd
-# ●=info@152
+# ●=info@151
 CbkyTT=sshd 未安装，正在安装...
-# ●=string@167
+# ●=string@168
+A9gQc1=(端口=$config_port)
+# ●=string@170
+ATERBS=SSH已启动{}，是否需要重新设置?
+# ●=string@178
 AwmRaO=输入新的SSH端口 (当前: {0}) : 
-# ●=info@170
+# ●=info@181
 B2i01m=已设置SSH端口: {0}
-# ●=info@172
+# ●=info@183
 BAf12Q=无效端口，保持默认: $curr_ssh_port
-# ●=info@179
-AV251C=已允许 root 登录
-# ●=info@180
-CMJB1s=已禁止 root 登录
 # ●=info@190
+AV251C=已允许 root 登录
+# ●=info@191
+CMJB1s=已禁止 root 登录
+# ●=info@201
 A58FQX=SSH 配置已应用
 # ◆=configure_ip
-# ●=exiterr@203
-AnMUj_=return value=$ret
-# ●=info@206
+# ●=info@219
 AGC_1W=NetworkManager 正在运行
-# ●=info@209
+# ●=info@222
 BqbrMF=ifupdown 正在运行
-# ●=info@212
+# ●=info@225
 AHezXa=wicked 正在运行
-# ●=info@215
+# ●=info@228
 BfE9I1=network-scripts 正在运行
-# ●=info@218
+# ●=info@231
 C3EbKb=systemd-networkd 正在运行
-# ●=exiterr@221
+# ●=exiterr@234
 DS2AXc=未知网络管理器，无法配置静态IP
 # ◆=install_docker
-# ●=info@227
+# ●=info@240
 B4UUwh=在 $DISTRO 上安装 Docker 与 Docker Compose...
 
 # ■=bin/test_lang.sh
@@ -148,25 +140,26 @@ BGAgyU=# {0} 语言包，文档结构：\n\
 Aw3y8l={0} 语言文件已创建
 
 # ■=lib/bash_utils.sh
-# ◆=confirm_action
-# ●=string@48
+# ◆=do_keyboard_interrupt
+# ●=exiterr@78
 Ai7UlQ=operation is cancelled
-# ●=exiterr@51
-A5CS0E=User interrupted the operation, exiting the program
+# ◆=confirm_action
+# ●=error@88
+Cq88WR=Please enter 'y' for yes, 'n' for no, or press Enter for default
 # ◆=file_backup_sj
-# ●=exiterr@191
+# ●=exiterr@236
 A-g65z=未指定需要备份的文件
-# ●=warning@202
+# ●=warning@247
 D7A4Jy=警告：未找到匹配 '$pattern' 的文件
-# ●=warning@214
+# ●=warning@259
 BDbdpK=备份文件 $backup_file 已存在，跳过
-# ●=info@221
+# ●=info@266
 CPJo9U=已创建备份: $src_file -> $backup_file
-# ●=error@224
+# ●=error@269
 CNpapj=错误：无法创建备份文件 $backup_file
-# ●=exiterr@232
+# ●=exiterr@277
 DvpZ6Q=重要文件无法备份
-# ●=info@234
+# ●=info@279
 ACMBwV=备份完成：成功 $backup_count 个，跳过 $skip_count 个，失败 $error_count 个
 
 # ■=lib/cmd_handler.sh
@@ -193,7 +186,7 @@ BzOdCD=JSON format error
 
 # ■=lib/msg_handler.sh
 # ◆=msg_parse_param
-# ●=error]:@433
+# ●=error]:@345
 B8f7ce=>&2
 
 # ■=lib/network.sh
@@ -238,16 +231,14 @@ AMrdLk=Python 安装失败: $loc_bin 不存在或不可执行
 # ●=info@243
 DkUaTG=Python $PY_VERSION 安装完成！
 # ◆=create_py_venv
-# ●=warning@255
-BqObTk=跳过虚拟环境创建
-# ●=info@262
+# ●=info@258
 AK7qPE=创建虚拟环境 $VENV_DIR...
-# ●=success@267
+# ●=success@263
 ClGJXq=虚拟环境创建成功！
-# ●=exiterr@270
+# ●=exiterr@266
 AXm5nN=创建虚拟环境失败
 # ◆=main
-# ●=info@300
+# ●=info@296
 DNdsm8=Python $PY_VERSION Standalone 自动安装脚本
 
 # ■=python/cmd_handler.py
@@ -269,33 +260,33 @@ CXrh40=安装{}完成
 
 # ■=python/file_util.py
 # ◆=file_backup_sj
-# ●=exiterr@118
+# ●=exiterr@117
 A-g65z=未指定需要备份的文件
-# ●=warning@130
+# ●=warning@129
 D1lk1B=未找到匹配 '{pattern}' 的文件
-# ●=warning@143
+# ●=warning@142
 Dxey7R=备份文件 {backup_file} 已存在，跳过
-# ●=info@151
+# ●=info@150
 CmH1ZD=已创建备份: {src_file} -> {backup_file}
-# ●=error@154
+# ●=error@153
 BCkZrE=无法创建备份文件 {backup_file}: {e}
-# ●=exiterr@159
+# ●=exiterr@158
 DvpZ6Q=重要文件无法备份
-# ●=info@161
+# ●=info@160
 DGFoIv=备份完成：成功 {backup_count} 个，跳过 {skip_count} 个，失败 {error_count} 个
 # ◆=file_restore_sj
-# ●=exiterr@181
+# ●=exiterr@180
 BXScoo=备份文件 {backup_file} 不存在，还原失败
-# ●=info@187
+# ●=info@186
 CAUKNQ=已还原文件: {backup_file} -> {src_file}
-# ●=exiterr@189
+# ●=exiterr@188
 A3ECb6=无法创建备份文件 {src_file}: {e}
-# ●=info@191
+# ●=info@190
 DadsDq=还原文件：{src_file}
 # ◆=write_source_file
-# ●=info@207
+# ●=info@206
 CoDUAv=已更新 source list: {path}
-# ●=error@209
+# ●=error@208
 BcWbv7=写入失败: {e}
 
 # ■=python/i18n.py
@@ -349,63 +340,42 @@ Cil2nd={package} 安装成功
 CiTxoG={package} 安装失败
 
 # ■=python/network_util.py
-# ◆=count_down
-# ●=info@77
-D4Ay3S={duration}秒后修改网络配置：{ip_addr} (接口 {iface})，请准备好重连。按 Ctrl+C 取消
 # ◆=setup_octet
-# ●=_mf@160
+# ●=_mf@139
 AMqDM_=请输入静态IP地址的最后一段 (1-255) [默认: {}]: 
-# ●=_mf@164
+# ●=_mf@143
 CXjGI-=请输入数字
-# ●=_mf@169
+# ●=_mf@148
 CtqJsG=输入必须在 1~255 之间
-# ●=_mf@173
+# ●=_mf@152
 Dqn3KQ=输入的静态IP地址不能与网关相同，请重新输入
-# ●=_mf@182
+# ●=_mf@161
 DZ4Zcf=\n操作已取消
 # ◆=fix_ip
-# ●=info@197
+# ●=info@182
 Cn2ESg={env_nw['IS_CLOUD']} 云服务器无需设置固定IP
-# ●=_mf@202
-DpYirA=检测到服务器已配置静态IP，是否调整IP？
-# ●=_mf@204
-CfY7vG=检测到服务器使用动态IP，是否改为静态IP？
-# ●=_mf@206
-DNTqr0=检测到服务器可能使用静态IP，是否调整IP？
-# ●=_mf@209
-CFrSgR=用户选择不修改网络配置
-# ◆=config_nmcli
-# ●=exiterr@225
-Cs9eCn=nmcli 未安装或不可用，请先安装 NetworkManager 命令行工具
-# ●=exiterr@256
-CiQhsW=连接激活失败，请检查网络并尝试重新连接
-# ◆=configure_ip
-# ●=exiterr@276
-AYHgzu=return value={result}
-# ●=info@281
-AGC_1W=NetworkManager 正在运行
-# ●=info@284
-BqbrMF=ifupdown 正在运行
-# ●=info@287
-AHezXa=wicked 正在运行
-# ●=info@290
-BfE9I1=network-scripts 正在运行
-# ●=info@293
-C3EbKb=systemd-networkd 正在运行
-# ●=exiterr@296
-DS2AXc=未知网络管理器，无法配置静态IP
+# ●=_mf@188
+AJrUNk=A static IP is already configured on the server. Would you like to adjust it?
+# ●=_mf@191
+CbxkLM=Detected that the server is using a dynamic IP. Would you like to change it to a static IP?
+# ●=_mf@194
+DvWz9u=Detected that the server might be using a static IP. Would you like to adjust it?
+# ●=_mf@197
+B657zX=User chose not to modify the network configuration
 
 # ■=python/system.py
 # ◆=confirm_action
-# ●=_mf@93
-DZ4Zcf=\n操作已取消
-# ●=_mf@96
+# ●=_mf@58
+CPcmGT=操作已取消
+# ●=_mf@60
+Bw0U--=输入错误，请输入 Y 或 N
+# ●=_mf@97
 B8V-HW=输入处理出错: {}
 
 # ■=python/test_lang.py
 # ◆=show_help_info
 # ●=exiterr@25
-AulZOi=Usage: show_help_info [command]   
+CQyjis=Usage: show_help_info [command]   \
         Available commands: find, ls   
 # ●=info@95
 Aw3y8l={0} 语言文件已创建
