--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -50,16 +50,12 @@ A1bqoY=语言文件更新完成
 D6sy7g=请输入语言参数，如 --lang={0}
 
 # ■=bin/init_main.sh
-# ◆=initial_global
-C_wKj8=Unsupported distribution: $ID ($PRETTY_NAME)
-C9Ii-I=Unable to detect Linux distribution, cannot proceed
-# ◆=check_user_sudo
-AxwYcd=无法安装 sudo，请使用 root 账号执行本脚本(su -)，或手动安装 sudo
-C1aPQb=用户非 sudo 组，请使用 root 账号执行本脚本(su -)，或手动加入 sudo
 # ◆=initial_env
 DHzikX=安装所需软件包...
 # ◆=config_sshd
 CbkyTT=sshd 未安装，正在安装...
+A9gQc1=(端口=$config_port)
+ATERBS=SSH已启动{}，是否需要重新设置?
 AwmRaO=输入新的SSH端口 (当前: {0}) :
 B2i01m=已设置SSH端口: {0}
 BAf12Q=无效端口，保持默认: $curr_ssh_port
@@ -67,7 +63,6 @@ AV251C=已允许 root 登录
 CMJB1s=已禁止 root 登录
 A58FQX=SSH 配置已应用
 # ◆=configure_ip
-AnMUj_=return value=$ret
 AGC_1W=NetworkManager 正在运行
 BqbrMF=ifupdown 正在运行
 AHezXa=wicked 正在运行
@@ -96,9 +91,10 @@ BGAgyU=# {0} 语言包，文档结构：\n\
 Aw3y8l={0} 语言文件已创建
 
 # ■=lib/bash_utils.sh
-# ◆=confirm_action
+# ◆=do_keyboard_interrupt
 Ai7UlQ=操作已取消
-A5CS0E=User interrupted the operation, exiting the program
+# ◆=confirm_action
+Cq88WR=Please enter 'y' for yes, 'n' for no, or press Enter for default
 # ◆=file_backup_sj
 A-g65z=未指定需要备份的文件
 D7A4Jy=警告：未找到匹配 '$pattern' 的文件
@@ -155,7 +151,6 @@ CSK2Yu=解压安装失败
 AMrdLk=Python 安装失败: $loc_bin 不存在或不可执行
 DkUaTG=Python $PY_VERSION 安装完成！
 # ◆=create_py_venv
-BqObTk=跳过虚拟环境创建
 AK7qPE=创建虚拟环境 $VENV_DIR...
 ClGJXq=虚拟环境创建成功！
 AXm5nN=创建虚拟环境失败
@@ -225,8 +220,6 @@ Cil2nd={package} 安装成功
 CiTxoG={package} 安装失败
 
 # ■=python/network_util.py
-# ◆=count_down
-D4Ay3S={duration}秒后修改网络配置：{ip_addr} (接口 {iface})，请准备好重连。按 Ctrl+C 取消
 # ◆=setup_octet
 AMqDM_=请输入静态IP地址的最后一段 (1-255) [默认: {}]:
 CXjGI-=请输入数字
@@ -235,28 +228,20 @@ Dqn3KQ=输入的静态IP地址不能与网关相同，请重新输入
 DZ4Zcf=\n操作已取消
 # ◆=fix_ip
 Cn2ESg={env_nw['IS_CLOUD']} 云服务器无需设置固定IP
-DpYirA=检测到服务器已配置静态IP，是否调整IP？
-CfY7vG=检测到服务器使用动态IP，是否改为静态IP？
-DNTqr0=检测到服务器可能使用静态IP，是否调整IP？
-CFrSgR=用户选择不修改网络配置
-# ◆=config_nmcli
-Cs9eCn=nmcli 未安装或不可用，请先安装 NetworkManager 命令行工具
-CiQhsW=连接激活失败，请检查网络并尝试重新连接
-# ◆=configure_ip
-AYHgzu=return value={result}
-AGC_1W=NetworkManager 正在运行
-BqbrMF=ifupdown 正在运行
-AHezXa=wicked 正在运行
-BfE9I1=network-scripts 正在运行
-C3EbKb=systemd-networkd 正在运行
-DS2AXc=未知网络管理器，无法配置静态IP
+AJrUNk=检测到服务器已配置静态IP，是否调整IP？
+CbxkLM=检测到服务器使用动态IP，是否改为静态IP？
+DvWz9u=检测到服务器可能使用静态IP，是否调整IP？
+B657zX=用户选择不修改网络配置
 
 # ■=python/system.py
 # ◆=confirm_action
-DZ4Zcf=\n操作已取消
+CPcmGT=操作已取消
+Bw0U--=输入错误，请输入 Y 或 N
 B8V-HW=输入处理出错: {}
 
 # ■=python/test_lang.py
 # ◆=show_help_info
-AulZOi=Usage: show_help_info [command]
+CQyjis=Usage: show_help_info [command]   \
+    show_help_info [command]   \
+        Available commands: find, ls   
 Aw3y8l={0} 语言文件已创建
