--- a/config/lang/_lang.yml
+++ b/config/lang/_lang.yml
@@ -9,7 +9,7 @@
 config:
   project: zoomit-2025
   created: 2025/4/25 09:19:01
-  changed: '2025-06-24 19:02:01'
+  changed: '2025-06-26 11:01:41'
   djb2_len: 20
   djb2_coll: FILE # 目前仅在文件内处理hash冲突(暂未启用)
   del_mode: 2 # 0=保留；1=注释；2=删除
@@ -26,15 +26,15 @@ config:
     shell: sh
     python: py
   stats: # auto-generated, DO NOT UPDATE
-    file_nos: 50
-    zh: {count: 147}
-    en: {count: 147}
+    file_nos: 52
+    zh: {count: 153}
+    en: {count: 153}
 file:
   bin/cmd_help.sh:
     type: shell
     djb2_len: 20
     created: '2025-04-30 19:08:34'
-    changed: '2025-06-24 19:02:02'
+    changed: '2025-06-26 11:01:41'
     stats:
       zh: {count: 4, start: 8, end: 15}
       en: {count: 4, start: 8, end: 15}
@@ -42,7 +42,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-04-30 19:08:34'
-    changed: '2025-06-24 19:02:02'
+    changed: '2025-06-26 11:01:41'
     stats:
       zh: {count: 1, start: 17, end: 19}
       en: {count: 1, start: 17, end: 19}
@@ -50,7 +50,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-04-29 16:56:55'
-    changed: '2025-06-24 19:02:02'
+    changed: '2025-06-26 11:01:41'
     stats: #  auto-generated, DO NOT UPDATE
       zh: {count: 17, start: 21, end: 51}
       en: {count: 17, start: 21, end: 51}
@@ -58,98 +58,106 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-04-29 16:56:55'
-    changed: '2025-06-24 19:02:02'
+    changed: '2025-06-26 11:01:41'
     stats: #  auto-generated, DO NOT UPDATE
-      zh: {count: 20, start: 53, end: 79}
-      en: {count: 20, start: 53, end: 79}
+      zh: {count: 17, start: 53, end: 74}
+      en: {count: 17, start: 53, end: 74}
   bin/test_lang.sh:
     type: shell
     djb2_len: 20
     created: '2025-06-23 14:49:57'
-    changed: '2025-06-24 19:02:02'
+    changed: '2025-06-26 11:01:41'
     stats:
-      zh: {count: 7, start: 81, end: 97}
-      en: {count: 7, start: 81, end: 97}
+      zh: {count: 7, start: 76, end: 92}
+      en: {count: 7, start: 76, end: 92}
   lib/bash_utils.sh:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-06-24 19:02:02'
+    changed: '2025-06-26 11:01:41'
     stats:
-      zh: {count: 9, start: 99, end: 110}
-      en: {count: 9, start: 99, end: 110}
+      zh: {count: 9, start: 94, end: 106}
+      en: {count: 9, start: 94, end: 106}
   lib/cmd_handler.sh:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-06-24 19:02:02'
+    changed: '2025-06-26 11:01:41'
     stats:
-      zh: {count: 3, start: 112, end: 116}
-      en: {count: 3, start: 112, end: 116}
+      zh: {count: 3, start: 108, end: 112}
+      en: {count: 3, start: 108, end: 112}
   lib/docker.sh:
     type: shell
     djb2_len: 20
     created: '2025-06-12 18:10:50'
-    changed: '2025-06-24 19:02:02'
+    changed: '2025-06-26 11:01:41'
     stats:
-      zh: {count: 2, start: 118, end: 122}
-      en: {count: 2, start: 118, end: 122}
+      zh: {count: 2, start: 114, end: 118}
+      en: {count: 2, start: 114, end: 118}
   lib/json_handler.sh:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-06-24 19:02:02'
+    changed: '2025-06-26 11:01:41'
     stats:
-      zh: {count: 1, start: 124, end: 126}
-      en: {count: 1, start: 124, end: 126}
+      zh: {count: 1, start: 120, end: 122}
+      en: {count: 1, start: 120, end: 122}
   lib/msg_handler.sh:
     type: shell
     djb2_len: 20
     created: '2025-06-12 18:10:50'
-    changed: '2025-06-24 19:02:02'
+    changed: '2025-06-26 11:01:41'
     stats:
-      zh: {count: 1, start: 128, end: 130}
-      en: {count: 1, start: 128, end: 130}
+      zh: {count: 1, start: 124, end: 126}
+      en: {count: 1, start: 124, end: 126}
   lib/network.sh:
     type: shell
     djb2_len: 20
     created: '2025-06-12 18:10:50'
-    changed: '2025-06-24 19:02:02'
+    changed: '2025-06-26 11:01:41'
     stats:
-      zh: {count: 5, start: 132, end: 140}
-      en: {count: 5, start: 132, end: 140}
+      zh: {count: 5, start: 128, end: 136}
+      en: {count: 5, start: 128, end: 136}
   lib/python_install.sh:
     type: shell
     djb2_len: 20
     created: '2025-06-12 18:10:50'
-    changed: '2025-06-24 19:02:02'
+    changed: '2025-06-26 11:01:41'
     stats:
-      zh: {count: 15, start: 142, end: 164}
-      en: {count: 15, start: 142, end: 164}
+      zh: {count: 14, start: 138, end: 159}
+      en: {count: 14, start: 138, end: 159}
   python/cmd_handler.py:
     type: python
     djb2_len: 20
     created: '2025-06-24 19:02:02'
-    changed: '2025-06-24 19:02:02'
+    changed: '2025-06-26 11:01:41'
     stats:
-      zh: {count: 6, start: 166, end: 175}
-      en: {count: 6, start: 166, end: 175}
+      zh: {count: 6, start: 161, end: 170}
+      en: {count: 6, start: 161, end: 170}
   python/file_util.py:
     type: python
     djb2_len: 20
     created: '2025-06-23 14:40:10'
-    changed: '2025-06-24 19:02:02'
+    changed: '2025-06-26 11:01:41'
     stats:
-      zh: {count: 13, start: 177, end: 193}
-      en: {count: 13, start: 177, end: 193}
+      zh: {count: 13, start: 172, end: 188}
+      en: {count: 13, start: 172, end: 188}
   python/i18n.py:
     type: python
     djb2_len: 20
     created: '2025-06-23 14:40:10'
-    changed: '2025-06-24 19:02:02'
+    changed: '2025-06-26 11:01:41'
     stats:
-      zh: {count: 8, start: 195, end: 209}
-      en: {count: 8, start: 195, end: 209}
+      zh: {count: 8, start: 190, end: 204}
+      en: {count: 8, start: 190, end: 204}
+  python/lang_server.py:
+    type: python
+    djb2_len: 20
+    created: '2025-06-25 17:08:53'
+    changed: '2025-06-25 17:27:48'
+    stats:
+      zh: {count: 19, start: 206, end: 233}
+      en: {count: 19, start: 206, end: 233}
   python/lang_test.py:
     type: python
     djb2_len: 20
@@ -162,39 +170,39 @@ file:
     type: python
     djb2_len: 20
     created: '2025-06-23 14:40:10'
-    changed: '2025-06-24 19:02:02'
+    changed: '2025-06-26 11:01:41'
     stats:
-      zh: {count: 2, start: 211, end: 214}
-      en: {count: 2, start: 211, end: 214}
+      zh: {count: 2, start: 206, end: 209}
+      en: {count: 2, start: 206, end: 209}
   python/mypip.py:
     type: python
     djb2_len: 20
     created: '2025-06-23 14:40:10'
-    changed: '2025-06-24 19:02:02'
+    changed: '2025-06-26 11:01:41'
     stats:
-      zh: {count: 7, start: 216, end: 226}
-      en: {count: 7, start: 216, end: 226}
+      zh: {count: 7, start: 211, end: 221}
+      en: {count: 7, start: 211, end: 221}
   python/network_util.py:
     type: python
     djb2_len: 20
     created: '2025-06-23 18:20:21'
-    changed: '2025-06-24 19:02:02'
+    changed: '2025-06-26 11:01:41'
     stats:
-      zh: {count: 20, start: 228, end: 253}
-      en: {count: 20, start: 228, end: 253}
+      zh: {count: 10, start: 223, end: 235}
+      en: {count: 10, start: 223, end: 235}
   python/system.py:
     type: python
     djb2_len: 20
     created: '2025-06-23 14:40:10'
-    changed: '2025-06-24 19:02:02'
+    changed: '2025-06-26 11:01:41'
     stats:
-      zh: {count: 2, start: 255, end: 258}
-      en: {count: 2, start: 255, end: 258}
+      zh: {count: 3, start: 237, end: 241}
+      en: {count: 3, start: 237, end: 241}
   python/test_lang.py:
     type: python
     djb2_len: 20
     created: '2025-06-23 14:49:57'
-    changed: '2025-06-24 19:02:02'
+    changed: '2025-06-26 11:01:41'
     stats:
-      zh: {count: 2, start: 260, end: 263}
-      en: {count: 2, start: 260, end: 263}
+      zh: {count: 2, start: 243, end: 248}
+      en: {count: 2, start: 243, end: 248}
