简化代码，调整语言

--- a/config/lang/.de.properties
+++ b/config/lang/.de.properties
@@ -5,6 +5,11 @@ INIT_SHELL_LANG="Skriptsprache initialisieren (Standard={}): "
 INIT_SYSTEM_START="Systemstart initialisieren"
 INIT_SYSTEM_END="Systemende initialisieren"
 INIT_LINUX_UNSUPPORT="Nicht unterstützte Linux-Distribution"
+# init_phrase
+CMD_UPGRADE="Aktualisieren"
+CMD_INSTALL="Installieren"
+CMD_SUCCESS="Erfolgreich"
+CMD_FAILURE="Fehlgeschlagen"
 # msg_handler
 MSG_ERROR="Fehler"
 MSG_SUCCESS="Erfolg"
