--- a/config/lang/.en.properties
+++ b/config/lang/.en.properties
@@ -5,6 +5,11 @@ INIT_SHELL_LANG="Initialize script language (default={}): "
 INIT_SYSTEM_START="Initialize system start"
 INIT_SYSTEM_END="Initialize system end"
 INIT_LINUX_UNSUPPORT="Unsupported Linux distribution"
+# init_phrase
+CMD_UPGRADE="Upgrade"
+CMD_INSTALL="Install"
+CMD_SUCCESS="Success"
+CMD_FAILURE="Failure"
 # msg_handler
 MSG_ERROR="ERROR"
 MSG_SUCCESS="SUCCESS"
