--- a/config/lang/.es.properties
+++ b/config/lang/.es.properties
@@ -5,6 +5,11 @@ INIT_SHELL_LANG="Inicializar el idioma del script (predeterminado={}): "
 INIT_SYSTEM_START="Iniciar el sistema"
 INIT_SYSTEM_END="Finalizar el sistema"
 INIT_LINUX_UNSUPPORT="Distribución de Linux no compatible"
+# init_phrase
+CMD_UPGRADE="Actualizar"
+CMD_INSTALL="Instalar"
+CMD_SUCCESS="Éxito"
+CMD_FAILURE="Fallo"
 # msg_handler
 MSG_ERROR="Error"
 MSG_SUCCESS="Éxito"
