--- a/config/lang/.ko.properties
+++ b/config/lang/.ko.properties
@@ -5,6 +5,11 @@ INIT_SHELL_LANG="스크립트 언어 초기화 (기본값={}): "
 INIT_SYSTEM_START="시스템 시작 초기화"
 INIT_SYSTEM_END="시스템 종료 초기화"
 INIT_LINUX_UNSUPPORT="지원되지 않는 Linux 배포판"
+# init_phrase
+CMD_UPGRADE="업그레이드"
+CMD_INSTALL="설치"
+CMD_SUCCESS="성공"
+CMD_FAILURE="실패"
 # msg_handler
 MSG_ERROR="오류"
 MSG_SUCCESS="성공"
