--- a/config/lang/.zh_TW.properties
+++ b/config/lang/.zh_TW.properties
@@ -5,6 +5,11 @@ INIT_SHELL_LANG="初始化脚本語言(預設={}): "
 INIT_SYSTEM_START="初始化系統啟動"
 INIT_SYSTEM_END="初始化系統結束"
 INIT_LINUX_UNSUPPORT="不支援的Linux發行版"
+# init_phrase
+CMD_UPGRADE="升級"
+CMD_INSTALL="安裝"
+CMD_SUCCESS="成功"
+CMD_FAILURE="失敗"
 # msg_handler
 MSG_ERROR="錯誤"
 MSG_SUCCESS="成功"
