--- a/config/lang/_lang.properties
+++ b/config/lang/_lang.properties
@@ -75,43 +75,40 @@ A1bqoY=语言文件更新完成
 D6sy7g=请输入语言参数，如 --lang={0}
 
 # ■=bin/init_main.sh
-# ◆=initial_env
-# ●=info@126
-DHzikX=安装所需软件包...
 # ◆=config_sshd
-# ●=info@151
+# ●=info@150
 CbkyTT=sshd 未安装，正在安装...
-# ●=string@168
-A9gQc1=(端口=$config_port)
-# ●=string@170
-ATERBS=SSH已启动{}，是否需要重新设置?
-# ●=string@178
+# ●=string@167
+CA6rgO=(端口={})
+# ●=string@169
+CFV3pp=SSH已启动{}，是否重新设置?
+# ●=string@177
 AwmRaO=输入新的SSH端口 (当前: {0}) : 
-# ●=info@181
+# ●=info@180
 B2i01m=已设置SSH端口: {0}
-# ●=info@183
+# ●=info@182
 BAf12Q=无效端口，保持默认: $curr_ssh_port
-# ●=info@190
+# ●=info@189
 AV251C=已允许 root 登录
-# ●=info@191
+# ●=info@190
 CMJB1s=已禁止 root 登录
-# ●=info@201
+# ●=info@200
 A58FQX=SSH 配置已应用
 # ◆=configure_ip
-# ●=info@219
+# ●=info@218
 AGC_1W=NetworkManager 正在运行
-# ●=info@222
+# ●=info@221
 BqbrMF=ifupdown 正在运行
-# ●=info@225
+# ●=info@224
 AHezXa=wicked 正在运行
-# ●=info@228
+# ●=info@227
 BfE9I1=network-scripts 正在运行
-# ●=info@231
+# ●=info@230
 C3EbKb=systemd-networkd 正在运行
-# ●=exiterr@234
+# ●=exiterr@233
 DS2AXc=未知网络管理器，无法配置静态IP
 # ◆=install_docker
-# ●=info@240
+# ●=info@239
 B4UUwh=在 $DISTRO 上安装 Docker 与 Docker Compose...
 
 # ■=bin/test_lang.sh
@@ -206,39 +203,44 @@ AH9rvM=重启 systemd-networkd 失败，请检查配置文件后再试
 
 # ■=lib/python_install.sh
 # ◆=detect_system
-# ●=exiterr@46
+# ●=exiterr@49
 A-fT9S=不支持的架构: $arch
 # ◆=get_python_url
-# ●=exiterr@65
+# ●=exiterr@68
 B-i4aq=不支持的系统类型: $system_type
 # ◆=on_exit
-# ●=warning@105
+# ●=warning@108
 Alj5Ma=检测到中断，正在终止后台下载进程（PID=$oid...）
 # ◆=smart_geturl
-# ●=string@179
+# ●=string@182
 BPBoao=大小: $human_size ↑$size_change | 平均: $avg_speed_text
-# ●=string@187
+# ●=string@190
 Dtkr_n=$(date '+%H:%M:%S') | 运行时间: $elapsed_formatted | $cached_stats
 # ◆=install_py_standalone
-# ●=info@228
+# ●=info@231
 AatL4G=下载 Python {} standalone...
-# ●=info@233
+# ●=info@236
 BA8WYI=安装 Python 到 {}...
-# ●=exiterr@236
+# ●=exiterr@239
 CSK2Yu=解压安装失败
-# ●=exiterr@241
+# ●=exiterr@244
 AMrdLk=Python 安装失败: $loc_bin 不存在或不可执行
-# ●=info@243
+# ●=info@246
 DkUaTG=Python $PY_VERSION 安装完成！
 # ◆=create_py_venv
-# ●=info@258
+# ●=info@261
 AK7qPE=创建虚拟环境 $VENV_DIR...
-# ●=success@263
+# ●=success@266
 ClGJXq=虚拟环境创建成功！
-# ●=exiterr@266
+# ●=exiterr@269
 AXm5nN=创建虚拟环境失败
+# ◆=clean_pkg_mgr
+# ●=info@344
+BNHOyr=清理 {0} 缓存...
+# ●=exiterr@352
+CMai8S=清理缓存失败
 # ◆=main
-# ●=info@296
+# ●=info@396
 DNdsm8=Python $PY_VERSION Standalone 自动安装脚本
 
 # ■=python/cmd_handler.py
@@ -320,25 +322,6 @@ Dzix3E=Invalid input! Please enter a number between 0-{tot_len}
 # ●=error@355
 BjJxaz=Invalid input! Please enter a number
 
-# ■=python/mypip.py
-# ◆=choose_pip_mirror
-# ●=error@189
-Aa26x4=输入错误！请输入 0-{len(mirror_list)} 之间的数字
-# ●=error@193
-BxmEiD=输入错误！请输入数字
-# ◆=upgrade_pip
-# ●=info@238
-CxNlor=pip 升级成功
-# ●=warning@240
-BRkVnN=pip 升级失败，继续安装其他包
-# ◆=install_packages
-# ●=info@256
-CDudks=安装所需 Python 包...
-# ●=info@266
-Cil2nd={package} 安装成功
-# ●=warning@268
-CiTxoG={package} 安装失败
-
 # ■=python/network_util.py
 # ◆=setup_octet
 # ●=_mf@139
@@ -354,13 +337,13 @@ DZ4Zcf=\n操作已取消
 # ◆=fix_ip
 # ●=info@182
 Cn2ESg={env_nw['IS_CLOUD']} 云服务器无需设置固定IP
-# ●=_mf@188
+# ●=_mf@189
 AJrUNk=A static IP is already configured on the server. Would you like to adjust it?
-# ●=_mf@191
+# ●=_mf@193
 CbxkLM=Detected that the server is using a dynamic IP. Would you like to change it to a static IP?
-# ●=_mf@194
+# ●=_mf@196
 DvWz9u=Detected that the server might be using a static IP. Would you like to adjust it?
-# ●=_mf@197
+# ●=_mf@199
 B657zX=User chose not to modify the network configuration
 
 # ■=python/system.py
