--- a/config/lang/.fr.properties
+++ b/config/lang/.fr.properties
@@ -5,6 +5,11 @@ INIT_SHELL_LANG="Initialiser la langue du script (par défaut={}): "
 INIT_SYSTEM_START="Initialiser le démarrage du système"
 INIT_SYSTEM_END="Initialiser la fin du système"
 INIT_LINUX_UNSUPPORT="Distribution Linux non prise en charge"
+# init_phrase
+CMD_UPGRADE="Mettre à jour"
+CMD_INSTALL="Installer"
+CMD_SUCCESS="Réussi"
+CMD_FAILURE="Échoué"
 # msg_handler
 MSG_ERROR="Erreur"
 MSG_SUCCESS="Succès"
