--- a/config/lang/.ja.properties
+++ b/config/lang/.ja.properties
@@ -5,6 +5,11 @@ INIT_SHELL_LANG="スクリプト言語を初期化 (デフォルト={}): "
 INIT_SYSTEM_START="システムの開始を初期化"
 INIT_SYSTEM_END="システムの終了を初期化"
 INIT_LINUX_UNSUPPORT="サポートされていないLinuxディストリビューション"
+# init_phrase
+CMD_UPGRADE="アップグレード"
+CMD_INSTALL="インストール"
+CMD_SUCCESS="成功"
+CMD_FAILURE="失敗"
 # msg_handler
 MSG_ERROR="エラー"
 MSG_SUCCESS="成功"
