--- a/config/lang/en.properties
+++ b/config/lang/en.properties
@@ -50,12 +50,10 @@ A1bqoY=语言文件更新完成
 D6sy7g=请输入语言参数，如 --lang={0}
 
 # ■=bin/init_main.sh
-# ◆=initial_env
-DHzikX=安装所需软件包...
 # ◆=config_sshd
 CbkyTT=sshd 未安装，正在安装...
-A9gQc1=(端口=$config_port)
-ATERBS=SSH已启动{}，是否需要重新设置?
+CA6rgO=(端口={})
+CFV3pp=SSH已启动{}，是否重新设置?
 AwmRaO=输入新的SSH端口 (当前: {0}) :
 B2i01m=已设置SSH端口: {0}
 BAf12Q=无效端口，保持默认: $curr_ssh_port
@@ -154,6 +152,9 @@ DkUaTG=Python $PY_VERSION 安装完成！
 AK7qPE=创建虚拟环境 $VENV_DIR...
 ClGJXq=虚拟环境创建成功！
 AXm5nN=创建虚拟环境失败
+# ◆=clean_pkg_mgr
+BNHOyr=清理 {0} 缓存...
+CMai8S=清理缓存失败
 # ◆=main
 DNdsm8=Python $PY_VERSION Standalone 自动安装脚本
 
@@ -206,18 +207,6 @@ C7-6zR=操作已取消，文件未删除
 # ◆=choose_mirror
 Dzix3E=Invalid input! Please enter a number between 0-{tot_len}
 BjJxaz=Invalid input! Please enter a number
-
-# ■=python/mypip.py
-# ◆=choose_pip_mirror
-Aa26x4=输入错误！请输入 0-{len(mirror_list)} 之间的数字
-BxmEiD=输入错误！请输入数字
-# ◆=upgrade_pip
-CxNlor=pip 升级成功
-BRkVnN=pip 升级失败，继续安装其他包
-# ◆=install_packages
-CDudks=安装所需 Python 包...
-Cil2nd={package} 安装成功
-CiTxoG={package} 安装失败
 
 # ■=python/network_util.py
 # ◆=setup_octet
