--- a/config/lang/zh.properties
+++ b/config/lang/zh.properties
@@ -52,14 +52,8 @@ D6sy7g=请输入语言参数，如 --lang={0}
 # ■=bin/init_main.sh
 # ◆=config_sshd
 CbkyTT=sshd 未安装，正在安装...
-CA6rgO=(端口={})
-CFV3pp=SSH已启动{}，是否重新设置?
-AwmRaO=输入新的SSH端口 (当前: {0}) :
-B2i01m=已设置SSH端口: {0}
-BAf12Q=无效端口，保持默认: $curr_ssh_port
-AV251C=已允许 root 登录
-CMJB1s=已禁止 root 登录
-A58FQX=SSH 配置已应用
+B8B0b-=SSH 配置已生效
+AWNMMM=systemctl restart $ssh_service 失败，请手动执行
 # ◆=configure_ip
 AGC_1W=NetworkManager 正在运行
 BqbrMF=ifupdown 正在运行
@@ -146,15 +140,15 @@ Dtkr_n=$(date '+%H:%M:%S') | 运行时间: $elapsed_formatted | $cached_stats
 AatL4G=下载 Python {} standalone...
 BA8WYI=安装 Python 到 {}...
 CSK2Yu=解压安装失败
-AMrdLk=Python 安装失败: $loc_bin 不存在或不可执行
+# ◆=install_py_bin
 DkUaTG=Python $PY_VERSION 安装完成！
-# ◆=create_py_venv
-AK7qPE=创建虚拟环境 $VENV_DIR...
+CCX9mW=Python $PY_VERSION 安装失败: $local_bin 不存在或不可执行
+# ◆=install_py_venv
+AJFZ9U=当前pip镜像: {}
+e01fce491d9e2428782cc71c377b9060=删除虚拟环境 $VENV_DIR...
+80ef6c26b08f4a9924ce302ea8bf3a14=创建虚拟环境 $VENV_DIR...
 ClGJXq=虚拟环境创建成功！
 AXm5nN=创建虚拟环境失败
-# ◆=clean_pkg_mgr
-BNHOyr=清理 {0} 缓存...
-CMai8S=清理缓存失败
 # ◆=main
 DNdsm8=Python $PY_VERSION Standalone 自动安装脚本
 
@@ -168,6 +162,13 @@ AZPBHL=更新系统完成
 # ◆=pm_install
 BG78fD=正在安装{}...
 CXrh40=安装{}完成
+
+# ■=python/config_sshd.py
+# ◆=config_sshd
+CprXXr=错误: SSH配置文件 {} 不存在
+DjrY3f=已启动SSH (当前端口 {})，是否重新设置?
+B_09im=输入新的SSH端口 (当前: {}):
+DZ4Zcf=\n操作已取消
 
 # ■=python/file_util.py
 # ◆=file_backup_sj
@@ -203,7 +204,7 @@ Aw30Tu={0} 语言文件已删除
 B0BXr_=确定要删除 {0} 语言文件吗?
 C7-6zR=操作已取消，文件未删除
 
-# ■=python/linux_speed.py
+# ■=python/mirror/linux_speed.py
 # ◆=choose_mirror
 Dzix3E=Invalid input! Please enter a number between 0-{tot_len}
 BjJxaz=Invalid input! Please enter a number
@@ -227,6 +228,10 @@ B657zX=用户选择不修改网络配置
 CPcmGT=操作已取消
 Bw0U--=输入错误，请输入 Y 或 N
 B8V-HW=输入处理出错: {}
+# ◆=install_packages
+CDudks=安装所需 Python 包...
+Cil2nd={package} 安装成功
+CiTxoG={package} 安装失败
 
 # ■=python/test_lang.py
 # ◆=show_help_info
