--- a/config/lang/_lang.properties
+++ b/config/lang/_lang.properties
@@ -76,39 +76,27 @@ D6sy7g=请输入语言参数，如 --lang={0}
 
 # ■=bin/init_main.sh
 # ◆=config_sshd
-# ●=info@150
+# ●=info@158
 CbkyTT=sshd 未安装，正在安装...
-# ●=string@167
-CA6rgO=(端口={})
-# ●=string@169
-CFV3pp=SSH已启动{}，是否重新设置?
-# ●=string@177
-AwmRaO=输入新的SSH端口 (当前: {0}) : 
-# ●=info@180
-B2i01m=已设置SSH端口: {0}
-# ●=info@182
-BAf12Q=无效端口，保持默认: $curr_ssh_port
-# ●=info@189
-AV251C=已允许 root 登录
-# ●=info@190
-CMJB1s=已禁止 root 登录
-# ●=info@200
-A58FQX=SSH 配置已应用
+# ●=info@179
+B8B0b-=SSH 配置已生效
+# ●=warning@181
+AWNMMM=systemctl restart $ssh_service 失败，请手动执行
 # ◆=configure_ip
-# ●=info@218
+# ●=info@201
 AGC_1W=NetworkManager 正在运行
-# ●=info@221
+# ●=info@204
 BqbrMF=ifupdown 正在运行
-# ●=info@224
+# ●=info@207
 AHezXa=wicked 正在运行
-# ●=info@227
+# ●=info@210
 BfE9I1=network-scripts 正在运行
-# ●=info@230
+# ●=info@213
 C3EbKb=systemd-networkd 正在运行
-# ●=exiterr@233
+# ●=exiterr@216
 DS2AXc=未知网络管理器，无法配置静态IP
 # ◆=install_docker
-# ●=info@239
+# ●=info@222
 B4UUwh=在 $DISTRO 上安装 Docker 与 Docker Compose...
 
 # ■=bin/test_lang.sh
@@ -138,34 +126,34 @@ Aw3y8l={0} 语言文件已创建
 
 # ■=lib/bash_utils.sh
 # ◆=do_keyboard_interrupt
-# ●=exiterr@78
+# ●=exiterr@68
 Ai7UlQ=operation is cancelled
 # ◆=confirm_action
-# ●=error@88
+# ●=error@78
 Cq88WR=Please enter 'y' for yes, 'n' for no, or press Enter for default
 # ◆=file_backup_sj
-# ●=exiterr@236
+# ●=exiterr@124
 A-g65z=未指定需要备份的文件
-# ●=warning@247
+# ●=warning@135
 D7A4Jy=警告：未找到匹配 '$pattern' 的文件
-# ●=warning@259
+# ●=warning@147
 BDbdpK=备份文件 $backup_file 已存在，跳过
-# ●=info@266
+# ●=info@154
 CPJo9U=已创建备份: $src_file -> $backup_file
-# ●=error@269
+# ●=error@157
 CNpapj=错误：无法创建备份文件 $backup_file
-# ●=exiterr@277
+# ●=exiterr@165
 DvpZ6Q=重要文件无法备份
-# ●=info@279
+# ●=info@167
 ACMBwV=备份完成：成功 $backup_count 个，跳过 $skip_count 个，失败 $error_count 个
 
 # ■=lib/cmd_handler.sh
 # ◆=install_base_pkg
-# ●=info@20
+# ●=info@18
 DvEyZZ=自动安装 '$lnx_cmd' ...
-# ●=exiterr@35
+# ●=exiterr@33
 BnlNCU=$lnx_cmd 安装失败，请手动安装，日志: {0} [{1}]
-# ●=success@37
+# ●=success@35
 CUzI33=$lnx_cmd 安装成功，日志: {0} [{1}]
 
 # ■=lib/docker.sh
@@ -203,157 +191,175 @@ AH9rvM=重启 systemd-networkd 失败，请检查配置文件后再试
 
 # ■=lib/python_install.sh
 # ◆=detect_system
-# ●=exiterr@49
+# ●=exiterr@48
 A-fT9S=不支持的架构: $arch
 # ◆=get_python_url
-# ●=exiterr@68
+# ●=exiterr@67
 B-i4aq=不支持的系统类型: $system_type
 # ◆=on_exit
-# ●=warning@108
+# ●=warning@107
 Alj5Ma=检测到中断，正在终止后台下载进程（PID=$oid...）
 # ◆=smart_geturl
-# ●=string@182
+# ●=string@181
 BPBoao=大小: $human_size ↑$size_change | 平均: $avg_speed_text
-# ●=string@190
+# ●=string@189
 Dtkr_n=$(date '+%H:%M:%S') | 运行时间: $elapsed_formatted | $cached_stats
 # ◆=install_py_standalone
-# ●=info@231
+# ●=info@229
 AatL4G=下载 Python {} standalone...
-# ●=info@236
+# ●=info@234
 BA8WYI=安装 Python 到 {}...
-# ●=exiterr@239
+# ●=exiterr@237
 CSK2Yu=解压安装失败
-# ●=exiterr@244
-AMrdLk=Python 安装失败: $loc_bin 不存在或不可执行
-# ●=info@246
+# ◆=install_py_bin
+# ●=info@254
 DkUaTG=Python $PY_VERSION 安装完成！
-# ◆=create_py_venv
-# ●=info@261
-AK7qPE=创建虚拟环境 $VENV_DIR...
-# ●=success@266
+# ●=exiterr@257
+CCX9mW=Python $PY_VERSION 安装失败: $local_bin 不存在或不可执行
+# ◆=install_py_venv
+# ●=string@270
+AJFZ9U=当前pip镜像: {}
+# ●=info@276
+e01fce491d9e2428782cc71c377b9060=删除虚拟环境 $VENV_DIR...
+# ●=info@285
+80ef6c26b08f4a9924ce302ea8bf3a14=创建虚拟环境 $VENV_DIR...
+# ●=success@287
 ClGJXq=虚拟环境创建成功！
-# ●=exiterr@269
+# ●=exiterr@290
 AXm5nN=创建虚拟环境失败
-# ◆=clean_pkg_mgr
-# ●=info@344
-BNHOyr=清理 {0} 缓存...
-# ●=exiterr@352
-CMai8S=清理缓存失败
 # ◆=main
-# ●=info@396
+# ●=info@395
 DNdsm8=Python $PY_VERSION Standalone 自动安装脚本
 
 # ■=python/cmd_handler.py
 # ◆=pm_refresh
-# ●=info@249
+# ●=info@248
 BbYPmF=正在刷新缓存...
-# ●=info@253
+# ●=info@252
 CHUbDk=缓存刷新完成
 # ◆=pm_upgrade
-# ●=info@267
+# ●=info@266
 A0xBLs=正在更新系统...
-# ●=info@271
+# ●=info@270
 AZPBHL=更新系统完成
 # ◆=pm_install
-# ●=info@288
+# ●=info@287
 BG78fD=正在安装{}...
-# ●=info@292
+# ●=info@291
 CXrh40=安装{}完成
+
+# ■=python/config_sshd.py
+# ◆=config_sshd
+# ●=error@89
+CprXXr=错误: SSH配置文件 {} 不存在
+# ●=_mf@102
+DjrY3f=已启动SSH (当前端口 {})，是否重新设置?
+# ●=_mf@110
+B_09im=输入新的SSH端口 (当前: {}): 
+# ●=_mf@121
+DZ4Zcf=\n操作已取消
 
 # ■=python/file_util.py
 # ◆=file_backup_sj
-# ●=exiterr@117
+# ●=exiterr@116
 A-g65z=未指定需要备份的文件
-# ●=warning@129
+# ●=warning@128
 D1lk1B=未找到匹配 '{pattern}' 的文件
-# ●=warning@142
+# ●=warning@141
 Dxey7R=备份文件 {backup_file} 已存在，跳过
-# ●=info@150
+# ●=info@149
 CmH1ZD=已创建备份: {src_file} -> {backup_file}
-# ●=error@153
+# ●=error@152
 BCkZrE=无法创建备份文件 {backup_file}: {e}
-# ●=exiterr@158
+# ●=exiterr@157
 DvpZ6Q=重要文件无法备份
-# ●=info@160
+# ●=info@159
 DGFoIv=备份完成：成功 {backup_count} 个，跳过 {skip_count} 个，失败 {error_count} 个
 # ◆=file_restore_sj
-# ●=exiterr@180
+# ●=exiterr@179
 BXScoo=备份文件 {backup_file} 不存在，还原失败
-# ●=info@186
+# ●=info@185
 CAUKNQ=已还原文件: {backup_file} -> {src_file}
-# ●=exiterr@188
+# ●=exiterr@187
 A3ECb6=无法创建备份文件 {src_file}: {e}
-# ●=info@190
+# ●=info@189
 DadsDq=还原文件：{src_file}
 # ◆=write_source_file
-# ●=info@206
+# ●=info@205
 CoDUAv=已更新 source list: {path}
-# ●=error@208
+# ●=error@207
 BcWbv7=写入失败: {e}
 
 # ■=python/i18n.py
 # ◆=resolve_lang_files
-# ●=string@71
+# ●=string@72
 A7XPUC={0} 语言文件不存在
 # ◆=get_lang_files
-# ●=exiterr@118
+# ●=exiterr@119
 DPIGII=请先添加语言文件
 # ◆=do_add_lang_files
-# ●=info@151
+# ●=info@152
 Aw3y8l={0} 语言文件已创建
 # ◆=add_lang_files
-# ●=string@166
-CEjzNC=确定要新增 {0} 语言文件吗?
 # ●=string@167
+CEjzNC=确定要新增 {0} 语言文件吗?
+# ●=string@168
 CZD3vP=操作已取消，未增加 {0} 文件文件
 # ◆=do_del_lang_files
-# ●=info@191
+# ●=info@192
 Aw30Tu={0} 语言文件已删除
 # ◆=del_lang_files
-# ●=string@203
-B0BXr_=确定要删除 {0} 语言文件吗?
 # ●=string@204
+B0BXr_=确定要删除 {0} 语言文件吗?
+# ●=string@205
 C7-6zR=操作已取消，文件未删除
 
-# ■=python/linux_speed.py
+# ■=python/mirror/linux_speed.py
 # ◆=choose_mirror
-# ●=error@351
+# ●=error@345
 Dzix3E=Invalid input! Please enter a number between 0-{tot_len}
-# ●=error@355
+# ●=error@349
 BjJxaz=Invalid input! Please enter a number
 
 # ■=python/network_util.py
 # ◆=setup_octet
-# ●=_mf@139
+# ●=_mf@137
 AMqDM_=请输入静态IP地址的最后一段 (1-255) [默认: {}]: 
-# ●=_mf@143
+# ●=_mf@141
 CXjGI-=请输入数字
-# ●=_mf@148
+# ●=_mf@146
 CtqJsG=输入必须在 1~255 之间
-# ●=_mf@152
+# ●=_mf@150
 Dqn3KQ=输入的静态IP地址不能与网关相同，请重新输入
-# ●=_mf@161
+# ●=_mf@159
 DZ4Zcf=\n操作已取消
 # ◆=fix_ip
-# ●=info@182
+# ●=info@180
 Cn2ESg={env_nw['IS_CLOUD']} 云服务器无需设置固定IP
-# ●=_mf@189
+# ●=_mf@187
 AJrUNk=A static IP is already configured on the server. Would you like to adjust it?
-# ●=_mf@193
+# ●=_mf@191
 CbxkLM=Detected that the server is using a dynamic IP. Would you like to change it to a static IP?
-# ●=_mf@196
+# ●=_mf@194
 DvWz9u=Detected that the server might be using a static IP. Would you like to adjust it?
-# ●=_mf@199
+# ●=_mf@197
 B657zX=User chose not to modify the network configuration
 
 # ■=python/system.py
 # ◆=confirm_action
-# ●=_mf@58
+# ●=_mf@59
 CPcmGT=操作已取消
-# ●=_mf@60
+# ●=_mf@61
 Bw0U--=输入错误，请输入 Y 或 N
-# ●=_mf@97
+# ●=_mf@98
 B8V-HW=输入处理出错: {}
+# ◆=install_packages
+# ●=info@252
+CDudks=安装所需 Python 包...
+# ●=info@262
+Cil2nd={package} 安装成功
+# ●=warning@264
+CiTxoG={package} 安装失败
 
 # ■=python/test_lang.py
 # ◆=show_help_info
