--- a/config/lang/_lang.yml
+++ b/config/lang/_lang.yml
@@ -9,7 +9,7 @@
 config:
   project: zoomit-2025
   created: 2025/4/25 09:19:01
-  changed: '2025-06-26 18:36:28'
+  changed: '2025-06-28 22:50:52'
   djb2_len: 20
   djb2_coll: FILE # 目前仅在文件内处理hash冲突(暂未启用)
   del_mode: 2 # 0=保留；1=注释；2=删除
@@ -26,15 +26,15 @@ config:
     shell: sh
     python: py
   stats: # auto-generated, DO NOT UPDATE
-    file_nos: 52
-    zh: {count: 147}
-    en: {count: 147}
+    file_nos: 51
+    zh: {count: 148}
+    en: {count: 148}
 file:
   bin/cmd_help.sh:
     type: shell
     djb2_len: 20
     created: '2025-04-30 19:08:34'
-    changed: '2025-06-26 18:36:29'
+    changed: '2025-06-28 22:50:52'
     stats:
       zh: {count: 4, start: 8, end: 15}
       en: {count: 4, start: 8, end: 15}
@@ -42,7 +42,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-04-30 19:08:34'
-    changed: '2025-06-26 18:36:29'
+    changed: '2025-06-28 22:50:52'
     stats:
       zh: {count: 1, start: 17, end: 19}
       en: {count: 1, start: 17, end: 19}
@@ -50,7 +50,7 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-04-29 16:56:55'
-    changed: '2025-06-26 18:36:29'
+    changed: '2025-06-28 22:50:52'
     stats: #  auto-generated, DO NOT UPDATE
       zh: {count: 17, start: 21, end: 51}
       en: {count: 17, start: 21, end: 51}
@@ -58,98 +58,106 @@ file:
     type: shell
     djb2_len: 20
     created: '2025-04-29 16:56:55'
-    changed: '2025-06-26 18:36:29'
+    changed: '2025-06-28 22:50:52'
     stats: #  auto-generated, DO NOT UPDATE
-      zh: {count: 16, start: 53, end: 72}
-      en: {count: 16, start: 53, end: 72}
+      zh: {count: 10, start: 53, end: 66}
+      en: {count: 10, start: 53, end: 66}
   bin/test_lang.sh:
     type: shell
     djb2_len: 20
     created: '2025-06-23 14:49:57'
-    changed: '2025-06-26 18:36:29'
+    changed: '2025-06-28 22:50:52'
     stats:
-      zh: {count: 7, start: 74, end: 90}
-      en: {count: 7, start: 74, end: 90}
+      zh: {count: 7, start: 68, end: 84}
+      en: {count: 7, start: 68, end: 84}
   lib/bash_utils.sh:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-06-26 18:36:29'
+    changed: '2025-06-28 22:50:52'
     stats:
-      zh: {count: 9, start: 92, end: 104}
-      en: {count: 9, start: 92, end: 104}
+      zh: {count: 9, start: 86, end: 98}
+      en: {count: 9, start: 86, end: 98}
   lib/cmd_handler.sh:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-06-26 18:36:29'
+    changed: '2025-06-28 22:50:52'
     stats:
-      zh: {count: 3, start: 106, end: 110}
-      en: {count: 3, start: 106, end: 110}
+      zh: {count: 3, start: 100, end: 104}
+      en: {count: 3, start: 100, end: 104}
   lib/docker.sh:
     type: shell
     djb2_len: 20
     created: '2025-06-12 18:10:50'
-    changed: '2025-06-26 18:36:29'
+    changed: '2025-06-28 22:50:52'
     stats:
-      zh: {count: 2, start: 112, end: 116}
-      en: {count: 2, start: 112, end: 116}
+      zh: {count: 2, start: 106, end: 110}
+      en: {count: 2, start: 106, end: 110}
   lib/json_handler.sh:
     type: shell
     djb2_len: 20
     created: '2025-05-08 23:37:21'
-    changed: '2025-06-26 18:36:29'
+    changed: '2025-06-28 22:50:52'
     stats:
-      zh: {count: 1, start: 118, end: 120}
-      en: {count: 1, start: 118, end: 120}
+      zh: {count: 1, start: 112, end: 114}
+      en: {count: 1, start: 112, end: 114}
   lib/msg_handler.sh:
     type: shell
     djb2_len: 20
     created: '2025-06-12 18:10:50'
-    changed: '2025-06-26 18:36:29'
+    changed: '2025-06-28 22:50:52'
     stats:
-      zh: {count: 1, start: 122, end: 124}
-      en: {count: 1, start: 122, end: 124}
+      zh: {count: 1, start: 116, end: 118}
+      en: {count: 1, start: 116, end: 118}
   lib/network.sh:
     type: shell
     djb2_len: 20
     created: '2025-06-12 18:10:50'
-    changed: '2025-06-26 18:36:29'
+    changed: '2025-06-28 22:50:52'
     stats:
-      zh: {count: 5, start: 126, end: 134}
-      en: {count: 5, start: 126, end: 134}
+      zh: {count: 5, start: 120, end: 128}
+      en: {count: 5, start: 120, end: 128}
   lib/python_install.sh:
     type: shell
     djb2_len: 20
     created: '2025-06-12 18:10:50'
-    changed: '2025-06-26 18:36:29'
+    changed: '2025-06-28 22:50:52'
     stats:
-      zh: {count: 16, start: 136, end: 160}
-      en: {count: 16, start: 136, end: 160}
+      zh: {count: 16, start: 130, end: 154}
+      en: {count: 16, start: 130, end: 154}
   python/cmd_handler.py:
     type: python
     djb2_len: 20
     created: '2025-06-24 19:02:02'
-    changed: '2025-06-26 18:36:29'
+    changed: '2025-06-28 22:50:52'
     stats:
-      zh: {count: 6, start: 162, end: 171}
-      en: {count: 6, start: 162, end: 171}
+      zh: {count: 6, start: 156, end: 165}
+      en: {count: 6, start: 156, end: 165}
+  python/config_sshd.py:
+    type: python
+    djb2_len: 20
+    created: '2025-06-27 19:16:58'
+    changed: '2025-06-28 22:50:52'
+    stats:
+      zh: {count: 4, start: 167, end: 172}
+      en: {count: 4, start: 167, end: 172}
   python/file_util.py:
     type: python
     djb2_len: 20
     created: '2025-06-23 14:40:10'
-    changed: '2025-06-26 18:36:29'
+    changed: '2025-06-28 22:50:52'
     stats:
-      zh: {count: 13, start: 173, end: 189}
-      en: {count: 13, start: 173, end: 189}
+      zh: {count: 13, start: 174, end: 190}
+      en: {count: 13, start: 174, end: 190}
   python/i18n.py:
     type: python
     djb2_len: 20
     created: '2025-06-23 14:40:10'
-    changed: '2025-06-26 18:36:29'
+    changed: '2025-06-28 22:50:52'
     stats:
-      zh: {count: 8, start: 191, end: 205}
-      en: {count: 8, start: 191, end: 205}
+      zh: {count: 8, start: 192, end: 206}
+      en: {count: 8, start: 192, end: 206}
   python/lang_server.py:
     type: python
     djb2_len: 20
@@ -166,35 +174,35 @@ file:
     stats:
       zh: {count: 2, start: 202, end: 205}
       en: {count: 2, start: 202, end: 205}
-  python/linux_speed.py:
+  python/mirror/linux_speed.py:
     type: python
     djb2_len: 20
-    created: '2025-06-23 14:40:10'
-    changed: '2025-06-26 18:36:29'
+    created: '2025-06-27 11:29:05'
+    changed: '2025-06-28 22:50:52'
     stats:
-      zh: {count: 2, start: 207, end: 210}
-      en: {count: 2, start: 207, end: 210}
+      zh: {count: 2, start: 208, end: 211}
+      en: {count: 2, start: 208, end: 211}
   python/network_util.py:
     type: python
     djb2_len: 20
     created: '2025-06-23 18:20:21'
-    changed: '2025-06-26 18:36:29'
+    changed: '2025-06-28 22:50:52'
     stats:
-      zh: {count: 10, start: 212, end: 224}
-      en: {count: 10, start: 212, end: 224}
+      zh: {count: 10, start: 213, end: 225}
+      en: {count: 10, start: 213, end: 225}
   python/system.py:
     type: python
     djb2_len: 20
     created: '2025-06-23 14:40:10'
-    changed: '2025-06-26 18:36:29'
+    changed: '2025-06-28 22:50:52'
     stats:
-      zh: {count: 3, start: 226, end: 230}
-      en: {count: 3, start: 226, end: 230}
+      zh: {count: 6, start: 227, end: 235}
+      en: {count: 6, start: 227, end: 235}
   python/test_lang.py:
     type: python
     djb2_len: 20
     created: '2025-06-23 14:49:57'
-    changed: '2025-06-26 18:36:29'
+    changed: '2025-06-28 22:50:52'
     stats:
-      zh: {count: 2, start: 232, end: 237}
-      en: {count: 2, start: 232, end: 237}
+      zh: {count: 2, start: 237, end: 242}
+      en: {count: 2, start: 237, end: 242}
